Update index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,3 +6,6 @@
 <% } else { %>
 <p>There are no posts!</p>
 <% } %>
+
+<p>Don't have an account? <a href="/clubhouse/user/sign-up">Sign up here</a></p>
+<p>Already have an account? <a href="/clubhouse/user/log-in">Log in here!</a></p>
