--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,11 @@
       <footer>
         <p>Copyright © 2024 ValerioL94</p>
         <a href="https://github.com/ValerioL94">
-          <img class="logo" src="/images/github-mark.svg" alt="github logo" />
+          <img
+            class="logo pulse"
+            src="/images/github-mark.svg"
+            alt="github logo"
+          />
         </a>
       </footer>
     </div>
