--- a/views/log_in.ejs
+++ b/views/log_in.ejs
@@ -1,10 +1,11 @@
 <%- contentFor('page') %>
 
 <% if (typeof user!=='undefined') { %>
-<h1>WELCOME BACK <%= user.username %></h1>
+<h1>WELCOME BACK <%= user.fullname %></h1>
 <a href="/log-out">LOG OUT</a>
 <% } else { %>
-<h1>Please Log in</h1>
+<p>Don't have an account? <a href="sign-up">Sign up here</a></p>
+<h1><%= title %></h1>
 <form method="post">
   <div class="form-group">
     <label for="username">Username:</label>
@@ -14,5 +15,4 @@
   </div>
   <button class="form-submit" type="submit">Log in</button>
 </form>
-<p>Don't have an account? <a href="clubHouse/user/sign-up">Sign up here</a></p>
 <% } %>
