--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,12 @@
 <%- contentFor('page') %>
 
-<h1><%= title %></h1>
+<h1 style="text-align: center;"><%= title %></h1>
 <% if (typeof user!=='undefined') { %>
-<h1>WELCOME BACK <%= user.fullname %></h1>
+<h2>Welcome back <%= user.fullname %></h2>
 <a href="/clubhouse/user/log-out">LOG OUT</a>
 <% } else { %>
-<p>Don't have an account? <a href="/clubhouse/user/sign-up">Sign up here!</a></p>
-<p>Already have an account? <a href="/clubhouse/user/log-in">Log in here!</a></p>
+<p style="text-align: end;">Don't have an account? <a href="/clubhouse/user/sign-up">Sign up here!</a></p>
+<p style="text-align: end;">Already have an account? <a href="/clubhouse/user/log-in">Log in here!</a></p>
 <% } %>
 <% if (typeof posts!=='undefined') { %>
 <p>WiP</p>
