--- a/views/log_in.ejs
+++ b/views/log_in.ejs
@@ -1,18 +1,25 @@
 <%- contentFor('page') %>
 
+<h1 style="text-align: center;"><%= title %></h1>
 <% if (typeof user!=='undefined') { %>
-<h1>WELCOME BACK <%= user.fullname %></h1>
-<a href="/log-out">LOG OUT</a>
+<h2>Welcome back <%= user.fullname %></h2>
+<a href="log-out">LOG OUT</a>
 <% } else { %>
-<p>Don't have an account? <a href="sign-up">Sign up here</a></p>
-<h1><%= title %></h1>
+<p style="text-align: end;">Don't have an account? <a href="sign-up">Sign up here</a></p>
 <form method="post">
   <div class="form-group">
-    <label for="username">Username:</label>
-    <input type="email" class="form-control" name="username" placeholder="johndoe@gmail.com" />
+    <label for="email">E-mail:</label>
+    <input type="email" class="form-control" name="email" placeholder="johndoe@gmail.com" />
     <label for="password">Password:</label>
-    <input type="password" class="form-control" name="password" id="password" />
+    <input type="password" autocomplete="current-password" class="form-control" name="password" id="password" />
   </div>
   <button class="form-submit" type="submit">Log in</button>
 </form>
+<% if (typeof errors!=='undefined') { %>
+<ul class="errors-list">
+  <% errors.forEach(error => { %>
+  <li><%= error.msg %></li>
+  <% }) %>
+</ul>
+<% } %>
 <% } %>
