--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,7 +1,11 @@
 <%- contentFor('page') %>
 
-<p>Already have an account? <a href="log-in">Log in here!</a></p>
-<h1><%= title %></h1>
+<h1 style="text-align: center;"><%= title %></h1>
+<% if (typeof user!=='undefined') { %>
+<h2>Welcome back <%= user.fullname %></h2>
+<a href="log-out">LOG OUT</a>
+<% } else { %>
+<p style="text-align: end;">Already have an account? <a href="log-in">Log in here!</a></p>
 <form method="POST">
   <div class="form-group">
     <label for="first_name">First name:</label>
@@ -10,12 +14,12 @@
     <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Doe" value="<%= typeof user=='undefined' ? '' : user.last_name %>" required />
   </div>
   <div class="form-group">
-    <label for="username">Username (your E-mail):</label>
-    <input type="email" class="form-control" id="username" name="username" placeholder="johndoe@gmail.com" value="<%= typeof user=='undefined' ? '' : user.username %>" required />
+    <label for="email">E-mail:</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="johndoe@gmail.com" value="<%= typeof user=='undefined' ? '' : user.email %>" required />
     <label for="password">Password:</label>
-    <input type="password" class="form-control" id="password" name="password" required />
+    <input type="password" autocomplete="new-password" class="form-control" id="password" name="password" required />
     <label for="passwordConfirmation">Confirm password:</label>
-    <input type="password" class="form-control" id="passwordConfirmation" name="passwordConfirmation" required />
+    <input type="password" autocomplete="new-password" class="form-control" id="passwordConfirmation" name="passwordConfirmation" required />
   </div>
   <button class="form-submit" type="submit">Sign Up</button>
 </form>
@@ -25,4 +29,5 @@
   <li><%= error.msg %></li>
   <% }) %>
 </ul>
+<% } %>
 <% } %>
