--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,13 @@
 
 <h1 style="text-align: center;"><%= title %></h1>
 <% if (typeof user!=='undefined') { %>
-<h2>Welcome back <%= user.fullname %></h2>
-<a href="/clubhouse/user/log-out">LOG OUT</a>
+<div style="display: flex; align-items: center; justify-content: space-between;">
+    <h2>User:<span style="color: crimson;"> <%= user.fullname %></span> - Status: <span style="color: crimson;"> <%= user.status %></span></h2>
+    <a href="/clubhouse/user/log-out">LOG OUT</a>
+</div>
+<% if (user.status==='anon') { %>
+    <a href="/clubhouse/user/join-the-club">Join the club</a>
+<% } %>
 <% } else { %>
 <p style="text-align: end;">Don't have an account? <a href="/clubhouse/user/sign-up">Sign up here!</a></p>
 <p style="text-align: end;">Already have an account? <a href="/clubhouse/user/log-in">Log in here!</a></p>
