--- a/views/join.ejs
+++ b/views/join.ejs
@@ -2,7 +2,7 @@
 
 <h1 style="text-align: center"><%= title %></h1>
 <% if (typeof user==='undefined') { %>
-<p>You're not even logged in and you wanna join the club? I don't think so.</p>
+<p>You're not even logged in and you wanna join the club? I don't think so, go <a href="/">back</a> now.</p>
 <% } else { %>
 <% if (user.status==='Anonymous') { %>
 <% if (typeof errors==='undefined') { %>
