--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,9 @@
         <a href="/clubhouse/user/sign-up">Sign up</a>
         <a href="/clubhouse/user/log-in">Log in</a>
         <% } %>
+        <% if (typeof user!=='undefined') { %>
+         <a href="/clubhouse/post/new-message">Add message</a>
+        <% } %>
         <a href="/clubhouse/user/join-the-club">Join the Club</a>
         <a href="/clubhouse/user/admin-page">Join the Admins</a>
         <% if (typeof user!=='undefined') { %>
