--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,7 +14,7 @@
 </form>
 <% } else { %>
   <p>You simply don't know the password, you have no reason to be here.</p>
-<%- include('./partials/errors-list') %>
+<%- include('./partials/errors_list') %>
 <% } %>
 <% } else { %>
 <p>Remember, with great power comes great responsibility.</p>
