--- a/views/log_in.ejs
+++ b/views/log_in.ejs
@@ -12,5 +12,5 @@
   </div>
   <button class="form-submit" type="submit">Log in</button>
 </form>
-<%- include('./partials/errors-list') %>
+<%- include('./partials/errors_list') %>
 <% } %>
