--- a/views/join.ejs
+++ b/views/join.ejs
@@ -14,7 +14,7 @@
 </form>
 <% } else { %>
 <p>You're not ready to join the club.</p>
-<%- include('./partials/errors-list') %>
+<%- include('./partials/errors_list') %>
 <% } %>
 <% } else { %>
 <p>Welcome to the Club.</p>
