--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -20,5 +20,5 @@
   </div>
   <button class="form-submit" type="submit">Sign Up</button>
 </form>
-<%- include('./partials/errors-list') %>
+<%- include('./partials/errors_list') %>
 <% } %>
