--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,6 +60,17 @@ nav a {
 #dynamic-page {
   padding: 25px;
 }
+#posts-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 20px;
+}
+.user-post {
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 15px;
+}
 
 .form-group {
   width: 100%;
