--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,13 @@
 <div id="posts-wrapper">
     <% posts.forEach(post => { %>
      <div class="user-post">
-         <p>Author: <%= typeof user!=='undefined' && user!=='Anonymous' ? post.user.fullname : 'Anonymous' %></p>
-         <p>Title: <%= post.title %></p>
-         <p>Comment: <%= post.comment %></p>
-         <p>Time: <%= post.timestamp.toLocaleString() %></p>
+         <div style="display: flex; justify-content: space-between;">
+             <p><strong>Author: </strong><%= typeof user!=='undefined' && user!=='Anonymous' ? post.user.fullname : 'Anonymous' %></p>
+             <p><strong>Time: </strong><%= post.timestamp.toLocaleString() %></p>
+         </div>
+         <p><strong>Title: </strong><%= post.title %></p>
+         <p><strong>Comment: </strong><%= post.comment %></p>
+         
       <% if (typeof user!=='undefined' && user.isAdmin) { %>
         <a href="post.url/delete">DELETE MESSAGE</a>
        <% } %>
