--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,23 +1,23 @@
 <%- contentFor('page') %>
 
 <% if (typeof user!=='undefined') { %>
-<h2>Welcome back<span style="color: crimson;"> <%= user.fullname %></span></h2>
+<h2>Welcome back<span style="color: crimson;"> <%= user.first_name %> <%= user.last_name %></span></h2>
 <% } else { %>
-<p><strong>DISCLAIMER: </strong><span style="color: crimson;">This is obviously a test project, there's no need to use your real name/email here (email won't be displayed anyway, so don't worry).</span></p>
+<p><strong>DISCLAIMER: </strong><span style="color: crimson;">This is just a test project, there's no need to use your real name/email here (email won't be displayed anyway).</span></p>
 <form method="POST">
   <div class="form-group">
     <label for="first_name">First name:</label>
-    <input type="text" class="form-control" id="first_name" name="first_name" placeholder="John" value="<%= typeof user=='undefined' ? '' : user.first_name %>" required />
+    <input type="text" class="form-control" id="first_name" name="first_name" placeholder="John" value="<%= typeof newUser=='undefined' ? '' : newUser.first_name %>" required />
     <label for="last_name">Last name:</label>
-    <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Doe" value="<%= typeof user=='undefined' ? '' : user.last_name %>" required />
+    <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Doe" value="<%= typeof newUser=='undefined' ? '' : newUser.last_name %>" required />
   </div>
   <div class="form-group">
     <label for="email">E-mail:</label>
-    <input type="email" class="form-control" id="email" name="email" placeholder="johndoe@gmail.com" value="<%= typeof user=='undefined' ? '' : user.email %>" required />
+    <input type="email" class="form-control" id="email" name="email" placeholder="johndoe@gmail.com" value="<%= typeof newUser=='undefined' ? '' : newUser.email %>" required />
     <label for="password">Password:</label>
     <input type="password" autocomplete="new-password" class="form-control" id="password" name="password" placeholder="minimum 8 characters" required />
     <label for="passwordConfirmation">Confirm password:</label>
-    <input type="password" autocomplete="new-password" class="form-control" id="passwordConfirmation" name="passwordConfirmation" placeholder="same as the password" required />
+    <input type="password" autocomplete="new-password" class="form-control" id="passwordConfirmation" name="passwordConfirmation" placeholder="same as password" required />
   </div>
   <button class="form-submit" type="submit">Sign Up</button>
 </form>
