--- a/views/partials/errors_list.ejs
+++ b/views/partials/errors_list.ejs
@@ -1,4 +1,4 @@
-<% if (typeof errors!=='undefined') { %>
+<% if (locals.errors) { %>
 <ul class="errors-list">
   <% errors.forEach(error => { %>
   <li><%= error.msg %></li>
