--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,25 @@
 <%- contentFor('page') %>
 
-<% if (typeof user!=='undefined') { %>
+<% if (locals.user) { %>
 <h2>User:<span style="color: crimson;"> <%= `${user.first_name} ${user.last_name}` %></span> / Status: <span style="color: crimson;"> <%= user.status %></span></h2>
 <% if (user.status==='Anonymous') { %>
 <p>Wanna join the club? You can try <a href="/user/join-the-club">here</a>.</p>
-<% } %>
-<% if (user.status==='Exclusive-member') { %>
+<% } else if (user.status==='Exclusive Member') { %>
 <p>Wanna join the admins? If you know the password, go <a href="/user/admin-page">here</a>.</p>
 <% } %>
 <% } %>
-<% if (typeof posts!=='undefined' && posts.length) { %>
+<% if (locals.posts && posts.length) { %>
 <div id="posts-wrapper">
   <% posts.forEach(post => { %>
   <div class="user-post">
     <div style="display: flex; justify-content: space-between;">
-      <p><strong>Author: </strong><%= typeof user!=='undefined' && user.status!=='Anonymous' ? post.user.fullname : 'Anonymous' %></p>
-      <p><strong>Membership status: </strong> <%= typeof user!=='undefined' && user.status!=='Anonymous' ? post.user.status : 'Redacted' %></p>
-      <p><strong>Time: </strong><%= typeof user!=='undefined' && user.status!=='Anonymous' ? post.timestamp.toLocaleString() : 'Redacted' %></p>
+      <p><strong>Author: </strong><%= locals.user && user.status!=='Anonymous' ? `${post.first_name} ${post.last_name}` : 'Anonymous' %></p>
+      <p><strong>Membership status: </strong> <%= locals.user && user.status!=='Anonymous' ? post.status : 'Redacted' %></p>
+      <p><strong>Time: </strong><%= local.user && user.status!=='Anonymous' ? post.timestamp.toLocaleString() : 'Redacted' %></p>
     </div>
     <p><strong>Title: </strong><%= post.title %></p>
     <p><strong>Comment: </strong><%= post.comment %></p>
-    <% if (typeof user!=='undefined' && user.isAdmin) { %>
+    <% if (locals.user && user.status==='Admin') { %>
     <a href="/post/<%= post.id %>/delete">DELETE THIS MESSAGE</a>
     <% } %>
   </div>
@@ -28,7 +27,7 @@
 </div>
 <% } else { %>
 <p>There are no messages.</p>
-<% if (typeof user !=='undefined') { %>
+<% if (locals.user) { %>
 <p>Be the first to add one! <a href="/post/new-message">Add message</a></p>
 <% } %>
 <% } %>
